gcc/testsuite/gdc.test/compilable/diag3243.d
// REQUIRED_ARGS: -vtls
// PERMUTE_ARGS:
template T()
{
    static this() {}
}

class C
{
    alias ti = T!();
}

void main() {}
